kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/valid/Class_new.kmt
/* $Id: Class_new.kmt,v 1.1 2005-04-20 15:20:58 ffleurey Exp $ */

// Class.new operation

package tctest;

class A {}

class B inherits A{}

class Test {

	operation test1() : Void is do
		A.new
	end
	
	operation test2() : Void is do
		var a : A
		a := B.new
	end
	
	operation test3() : Void is do
		var a : A
		a := A.new
	end
	
	operation test4() : Void is do
		var a : A
		var b : B
		a := B.new
		b ?= a
	end

}

/* END OF FILE */